# kiri

./: README.md  pyproject.toml  test_benchmark.py  test_install.py
examples/: mlp_classification.py  mnist_cnn.py  sentiment_lstm.py
kiri/: __init__.py  autograd.py  benchmark.py  data.py  model.py  tensor.py
kiri/backend/: __init__.py  accelerate.py  ane.py  ane_bench.py  cpu_ops.py  detect.py  fusion.py
kiri/nn/: __init__.py  activations.py  layers.py  loss.py  pooling.py  recurrent.py
kiri/optim/: __init__.py  optimizers.py  schedulers.py
kiri_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_kiri.py  test_stage2.py
tests/: test_kiri.py  test_stage3.py
