[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiri-ml"
version = "0.3.0"
description = "Lightweight ML framework for Apple Silicon and CPU — no CUDA required"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
apple = ["mlx>=0.20"]
dev   = ["pytest>=7", "numpy>=1.24"]

[project.urls]
Homepage   = "https://github.com/yourusername/kiri"
Repository = "https://github.com/yourusername/kiri"

[tool.pytest.ini_options]
testpaths = ["tests"]
